fixes discovered debugging with Morgan

--- a/community-content/alphafold_on_workbench/AlphaFold.ipynb
+++ b/community-content/alphafold_on_workbench/AlphaFold.ipynb
@@ -71,6 +71,7 @@
         "import sys\n",
         "import subprocess\n",
         "import tqdm.notebook\n",
+        "import alphafold.common\n",
         "\n",
         "TQDM_BAR_FORMAT = '{l_bar}{bar}| {n_fmt}/{total_fmt} [elapsed: {elapsed} remaining: {remaining}]'\n",
         "\n",
@@ -128,31 +129,31 @@
         "try:\n",
         "  with tqdm.notebook.tqdm(total=100, bar_format=TQDM_BAR_FORMAT) as pbar:\n",
         "    with io.capture_output() as captured:\n",
-        "      %shell rm -rf alphafold\n",
-        "      %shell git clone --branch main {GIT_REPO} alphafold\n",
+        "      !rm -rf alphafold\n",
+        "      !git clone --branch main {GIT_REPO} alphafold\n",
         "      pbar.update(8)\n",
         "      # Install the required versions of all dependencies.\n",
-        "      %shell pip3 install -r ./alphafold/requirements.txt\n",
+        "      !pip3 install -r ./alphafold/requirements.txt\n",
         "      # Run setup.py to install only AlphaFold.\n",
-        "      %shell pip3 install --no-dependencies ./alphafold\n",
+        "      !pip3 install --no-dependencies ./alphafold\n",
         "      pbar.update(10)\n",
         "\n",
         "      # Apply OpenMM patch.\n",
-        "      %shell pushd /opt/conda/lib/python3.7/site-packages/ && \\\n",
+        "      !pushd /opt/conda/lib/python3.7/site-packages/ && \\\n",
         "          patch -p0 < /content/alphafold/docker/openmm.patch && \\\n",
         "          popd\n",
         "\n",
         "      # Make sure stereo_chemical_props.txt is in all locations where it could be searched for.\n",
-        "      %shell mkdir -p /content/alphafold/alphafold/common\n",
-        "      %shell cp -f /content/stereo_chemical_props.txt /content/alphafold/alphafold/common\n",
-        "      %shell mkdir -p /opt/conda/lib/python3.7/site-packages/alphafold/common/\n",
-        "      %shell cp -f /content/stereo_chemical_props.txt /opt/conda/lib/python3.7/site-packages/alphafold/common/\n",
+        "      !mkdir -p /content/alphafold/alphafold/common\n",
+        "      !cp -f /content/stereo_chemical_props.txt /content/alphafold/alphafold/common\n",
+        "      !mkdir -p /opt/conda/lib/python3.7/site-packages/alphafold/common/\n",
+        "      !cp -f /content/stereo_chemical_props.txt /opt/conda/lib/python3.7/site-packages/alphafold/common/\n",
         "\n",
-        "      %shell mkdir --parents \"{PARAMS_DIR}\"\n",
-        "      %shell wget -O \"{PARAMS_PATH}\" \"{SOURCE_URL}\"\n",
+        "      !mkdir --parents \"{PARAMS_DIR}\"\n",
+        "      !wget -O \"{PARAMS_PATH}\" \"{SOURCE_URL}\"\n",
         "      pbar.update(27)\n",
         "\n",
-        "      %shell tar --extract --verbose --file=\"{PARAMS_PATH}\" \\\n",
+        "      !tar --extract --verbose --file=\"{PARAMS_PATH}\" \\\n",
         "        --directory=\"{PARAMS_DIR}\" --preserve-permissions\n",
         "      %shell rm \"{PARAMS_PATH}\"\n",
         "      pbar.update(55)\n",
