--- a/community-content/alphafold_on_workbench/AlphaFold.ipynb
+++ b/community-content/alphafold_on_workbench/AlphaFold.ipynb
@@ -50,6 +50,7 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
+        "source_hidden": true,
         "cellView": "form",
         "id": "woIxeCPygt7K"
       },
