--- a/community-content/alphafold_on_workbench/AlphaFold.ipynb
+++ b/community-content/alphafold_on_workbench/AlphaFold.ipynb
@@ -50,7 +50,8 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "source_hidden": true,
+        "collapsed": true,
+        "jupyter":{"source_hidden": true},
         "cellView": "form",
         "id": "woIxeCPygt7K"
       },
